--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,11 @@
       }
    ],
    "require": {
-      "phpstan/phpstan": "^1.4.6",
-      "pocketmine/pocketmine-mp": "^4.0.0",
-      "phpstan/phpstan-strict-rules": "^1.0",
-      "phpstan/extension-installer": "^1.0"
+      "phpstan/phpstan": "1.4.6",
+      "pocketmine/pocketmine-mp": "4.0.0",
+      "phpstan/phpstan-strict-rules": "1.0",
+      "phpstan/extension-installer": "1.0",
+      "cortexpe/commando": "dev-PM4"
    },
    "autoload": {
       "psr-4": {
