--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     "authors": [
         {
             "name": "NhanAZ",
-            "email": "nhanaz@protonmail.com",
+            "email": "nhanaz@duck.com",
             "homepage": "https://github.com/NhanAZ",
             "role": "Developer"
         }
     ],
     "support": {
-        "email": "nhanaz@protonmail.com",
+        "email": "nhanaz@duck.com",
         "issues": "https://github.com/nhanaz-pm-pl/ProfanityFilter/issues",
         "wiki": "https://github.com/nhanaz-pm-pl/ProfanityFilter/wiki",
         "source": "https://github.com/nhanaz-pm-pl/ProfanityFilter",
