--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "07:00"
+      time: "03:00"
       timezone: "Asia/Ho_Chi_Minh"
+    open-pull-requests-limit: 10
