--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,14 @@
         }
     ],
     "require": {
+        "php": "8.0.19",
+        "pocketmine/pocketmine-mp": "4.0.0"
+    },
+    "require-dev": {
         "phpstan/phpstan": "1.4.10",
         "phpstan/phpstan-strict-rules": "1.1.0",
         "phpstan/extension-installer": "1.1.0",
-        "pocketmine/pocketmine-mp": "4.0.0",
-        "friendsofphp/php-cs-fixer": "^3.8"
+        "friendsofphp/php-cs-fixer": "v3.8.0"
     },
     "autoload": {
         "psr-0": {
