--- a/plugin.yml
+++ b/plugin.yml
@@ -1,15 +1,7 @@
 ---
 name: ProfanityFilter
-version: 1.0.0
-main: NhanAZ\ProfanityFilter\ProfanityFilter
-api: 4.0.0
-
-website: github.com/nhanaz-pm-pl/ProfanityFilter
-description: Powerful Profanity Filter Plugin For PocketMine-MP Servers
-author: NhanAZ
-
-permissions:
-  profanityfilter.bypass:
-    description: "Bypass plugin's filter"
-    default: op
+version: 0.0.1
+main: NhanAZ\ProfanityFilter\Main
+api: 4.5.2
+src-namespace-prefix: NhanAZ\ProfanityFilter
 ...
